[package]
name = "blush"
version = "0.1.0"
authors = ["Henry Wallace <h@henrywallace.io>"]
edition = "2018"

[dependencies]
ordered-float = "1.0.2"
num-traits = "0.2.6"
lexical = "2.1.0"
ndarray = "0.12.1"
ndarray-rand = "0.9.0"
rand = "0.6.5"
clap = "2.33.0"
serde = {version="1.0.90", features=["derive"]}
serde_json = "1.0.39"
